refactor(core): 优化数据结构和代码实现
- 将LinkedList的remove(0)替换为removeFirst()提高性能
- 将ArrayList的add(0, item)替换为addFirst()优化插入操作
- 在toString方法上添加@NonNull注解增强类型安全
- 使用Java Record替代传统类定义简化代码结构
- 将字符串拼接改为文本块格式提高可读性
- 使用模式匹配实例检查替代传统instanceof转换
- 修复潜在空指针异常增加null检查逻辑
- 将坐标转换中的